# mc_clone

./: CMakeLists.txt  README.md
include/: helper.h  standard.h  vertices.h
include/glad/: gl.h
include/original/: helpers.h  rml.h
src/: fragmentShader.txt  fragment_shader.txt  helper.c  helpers.c  main.c  rml.c  vertexShader.txt  vertex_shader.txt
