cmake_minimum_required(VERSION 3.30)
set(CMAKE_C_STANDARD 99)
set(CMAKE_STANDARD_REQUIRED ON)
project(renderer)
file(GLOB_RECURSE SRC_FILES src/*.c)
add_executable(renderer ${SRC_FILES})
target_include_directories(renderer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
find_package(glfw3 3.3 REQUIRED)
target_link_libraries(renderer glfw)
find_package(OpenGL REQUIRED)
target_link_libraries(renderer OpenGL::GL)
target_compile_options(renderer PRIVATE -Wall -Wextra -Wpedantic)
